[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymcc"
version = "0.1.1"
description = "Module that reads mephisto mcc files from watertank scans or array files"
readme = "README.md"
repository = "https://github.com/tbezo/pymcc"
requires-python = ">=3.8"
dependencies = [
    "pylinac",
    "pandas",
]
